Bug 444565 - If icon view is used, search result in Kickoff launches wrong KCM
Summary: If icon view is used, search result in Kickoff launches wrong KCM
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: iconview (other bugs)
Version First Reported In: 5.24.90
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-10-28 21:04 UTC by Patrick Silva
Modified: 2022-06-15 18:37 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.26
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2021-10-28 21:04:21 UTC
STEPS TO REPRODUCE
1. set System Settings to icon view mode
2. use kickoff to search for Screen Locking KCM
3. click on 'Screen Locking' in the search results

OBSERVED RESULT
General Behavior KCM opens in System Settings instead of Screen Locking KCM

EXPECTED RESULT
Screen Locking KCM opens in System Settings

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.23.80
KDE Frameworks Version: 5.88.0
Qt Version: 5.15.3
Graphics Platform: Wayland

ADDITIONAL INFORMATION
after the provided steps, Dsktops Effects, Screen Edges, Touch Screen, Virtual Desktops and Activities KCMs are missing from side bar of System Settings.
Comment 1 Ismael Asensio 2021-10-28 21:53:52 UTC
I can reproduce the bug
Comment 2 Bug Janitor Service 2022-05-21 02:39:05 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/systemsettings/-/merge_requests/145
Comment 3 Ismael Asensio 2022-05-21 11:55:47 UTC
Git commit 04c25409563eb96864b4ccb2216707160d92a035 by Ismael Asensio.
Committed on 21/05/2022 at 11:49.
Pushed by iasensio into branch 'master'.

IconMode: Switch to the selected KCM

When systemsettings is launched in Icon Mode to open a specific KCM,
switch to that KCM.
FIXED-IN: 5.26

M  +11   -0    core/ModuleView.cpp
M  +2    -0    core/ModuleView.h
M  +5    -0    icons/IconMode.cpp

https://invent.kde.org/plasma/systemsettings/commit/04c25409563eb96864b4ccb2216707160d92a035
Comment 4 Ismael Asensio 2022-06-15 17:11:29 UTC
Git commit 92dba7cd9744385535051f43a4614330999945c5 by Ismael Asensio.
Committed on 15/06/2022 at 17:11.
Pushed by iasensio into branch 'cherry-pick-04c25409'.

IconMode: Switch to the selected KCM

When systemsettings is launched in Icon Mode to open a specific KCM,
switch to that KCM.
FIXED-IN: 5.26


(cherry picked from commit 04c25409563eb96864b4ccb2216707160d92a035)

M  +11   -0    core/ModuleView.cpp
M  +2    -0    core/ModuleView.h
M  +5    -0    icons/IconMode.cpp

https://invent.kde.org/plasma/systemsettings/commit/92dba7cd9744385535051f43a4614330999945c5