IconMode: Switch to the selected KCM

When systemsettings is launched in Icon Mode to open a specific KCM,
switch to that KCM.

BUG: 444565
FIXED-IN: 5.26


(cherry picked from commit 04c25409563eb96864b4ccb2216707160d92a035)